--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -7,7 +7,7 @@ pipeline:
       - mkdir completions
       - ./bin/haunt completion zsh > completions/haunt_zsh
       - ./bin/haunt completion bash > completions/haunt_bash
-      - ./bin/haunt copletion fish > completions/haunt_fish
+      - ./bin/haunt completion fish > completions/haunt_fish
   publish:
     image: goreleaser/goreleaser
     commands:
