ci: fix github buiild

--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -11,14 +11,14 @@ pipeline:
   publish:
     image: goreleaser/goreleaser
     commands:
-      - goreleaser release
+      - goreleaser release --clean
     secrets: [ gitea_token ]
     when:
       event: tag
   publish-github:
     image: goreleaser/goreleaser
     commands:
-      - goreleaser release --config .githubrelease.yaml
+      - goreleaser release --config .githubrelease.yaml --clean
     secrets: [ github_token ]
     when:
       event: tag
