revert 90301141af663b7f2e255173a6e7134ed892f6c2
revert ci: fix

--- a/.githubrelease.yaml
+++ b/.githubrelease.yaml
@@ -1,7 +1,7 @@
-gitea_urls:
-  api: https://gitea.asdf.cafe/api/v1
-  download: https://gitea.asdf.cafe
-  skip_tls_verify: false
+release:
+  github:
+    owner: abs3ntdev
+    name: haunt
 
 before:
   hooks:
