--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -15,4 +15,11 @@ pipeline:
     secrets: [ gitea_token ]
     when:
       event: tag
+  publish-github:
+    image: goreleaser/goreleaser
+    commands:
+      - goreleaser release --config .githubrelease.yaml --clean
+    secrets: [ github_token ]
+    when:
+      event: tag
 
